almost finished except menu

--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
                 <li><a href="#">TWISTER</a></li>
                 <li><a href="#">RockStar's</a></li>
             </ul>
-						<div class="clear"></div>
-						<div class="notification">
-								<a href="#">
-										<span>Super New Stuff is here!!</span><br/>
-										<span>&#x2605;</span>
-								</a>
-						</div>
+            <div class="clear"></div>
+            <div class="notification">
+                <a href="#">
+                    <span>Super New Stuff is here!!</span><br/>
+                    <span>&#x2605;</span>
+                </a>
+            </div>
         </div>
     </div>
     <div class="container">
         <div class="logo"><a href="#"><img src="images/thumbnails/logofull.png"/></a></div>
         <div class="currency">
             <div class="flag"></div>
-						<!--TODO: remove select and label; replace these with dives-->
+            <!--TODO: remove select and label; replace these with dives-->
             <div id="currency">
                 <div><span class="desktop-visible">United Kingdom, </span>&#163; GBP</div>
             </div>
         </div>
-				<ul class="account-info">
-						<li class="account"><a href="#">My Account</a></li>
-						<li class="desktop-visible"><a href="#">Saved items</a></li>
-						<li class="cart">
-							<a href="#">Cart</a>
-							<span class="cart-quantity">(0)</span>
-							<span class="total-sum">$0.00</span>
-						</li>
-				</ul>
+        <ul class="account-info">
+            <li class="account"><a href="#">My Account</a></li>
+            <li class="desktop-visible"><a href="#">Saved items</a></li>
+            <li class="cart">
+                <a href="#">Cart</a>
+                <span class="cart-quantity">(0)</span>
+                <span class="total-sum">$0.00</span>
+            </li>
+        </ul>
     </div>
 </header>
 <nav>
@@ -65,6 +65,7 @@
         </div>
         <a class="cart-mobile"></a>
         <a class="account-mobile"></a>
+
         <div class="clear"></div>
     </div>
 </nav>
@@ -72,40 +73,50 @@
     <div class="container">
         <div class="carousel-wrapper">
             <ul class="content">
-                <li><div class="carousel-image-1">
-                    <div class="carousel-text-1">Gentlemen,<br/>this way please</div>
-                    <button type="submit" class="carousel-mobile-button">View Collection</button>
-                </div></li>
-                <li><div class="carousel-image-2">2</div></li>
-                <li><div class="carousel-image-3">3</div></li>
+                <li>
+                    <div class="carousel-image-1">
+                        <div class="carousel-text-1">Gentlemen,<br/>this way please</div>
+                        <div class="carousel-text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Suspendisse vitae massa velit, eu laoreet massa. Sed ad orci libero, eu dignissim enim.
+                        </div>
+                        <button type="submit" class="carousel-mobile-button">View Collection</button>
+                    </div>
+                </li>
+                <li>
+                    <div class="carousel-image-2">2</div>
+                </li>
+                <li>
+                    <div class="carousel-image-3">3</div>
+                </li>
             </ul>
-            <div class="prev"></div>
-            <div class="next"></div>
+            <a href="#" class="prev"></a>
+            <a href="#" class="next"></a>
         </div>
     </div>
 </section>
 <section class="advertisement">
     <div class="container">
         <div class="adv-topic">
-            <h3>the finest quality</h3>
+            <h1>the finest quality</h1> <!-- h1-->
         </div>
         <div class="adv-wrapper">
-            <div class="jackets adv-blocks">
+            <a href="#" class="jackets adv-blocks">
                 <p>Jackets</p>
-            </div>
-            <div class="suites adv-blocks">
+            </a>
+            <a href="#" class="suites adv-blocks">
                 <p>Suites</p>
-            </div>
-            <div class="jerseys adv-blocks">
+            </a>
+            <a href="#" class="jerseys adv-blocks">
                 <p>Jerseys</p>
-            </div>
-            <div class="shoes adv-blocks">
+            </a>
+            <a href="#" class="shoes adv-blocks">
                 <p>Shoes</p>
-            </div>
+            </a>
         </div>
         <div class="adv-text">
-            <h2>Mauris Iaculis Porttitor Posuere.
-                Praesent Id Metus Massa</h2>
+            <h3>Mauris Iaculis Porttitor Posuere. <!-- h3-->
+                Praesent Id Metus Massa</h3>
+
             <p>Donec congue lacinia dui, a porttitor
                 lectus condimentum laoreet.
                 Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum
@@ -118,11 +129,11 @@
 </section>
 <section class="goods">
     <div class="container">
-            <div class="goods-topic">
-                <p>Popular products</p>
-            </div>
+        <div class="goods-topic">
+            <h2>Popular products</h2> <!-- h2-->
+        </div>
         <div class="goods-subtopic">
-            View All
+            <a href="#">View All</a>
         </div>
         <div class="goods-main-block">
             <div class="goods-block">
@@ -133,6 +144,7 @@
                 <div class="boot1-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">Dark Brogues</p>
+
                     <div class="smallLine"></div>
                     <p class="price">$ 65.07</p>
                 </div>
@@ -142,6 +154,7 @@
                 <div class="boot2-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">Leather hightops</p>
+
                     <div class="smallLine"></div>
                     <p class="price">$ 65.07</p>
                 </div>
@@ -152,6 +165,7 @@
                 <div class="boot3-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">gray brogues</p>
+
                     <div class="smallLine"></div>
                     <p class="price"><s>$ 65.07</s> <span class="discount">$ 38.00</span></p>
                 </div>
@@ -161,21 +175,25 @@
                 <div class="boot4-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">dark brogues</p>
+
                     <div class="smallLine"></div>
                     <p class="price">$ 65.07</p>
                 </div>
                 <a href="#" class="add-to-cart">Add to Cart</a>
             </div>
         </div>
-            <div class="goods-topic recent">just arrived</div>
+        <div class="goods-topic recent">
+            <h2>just arrived</h2>
+        </div>
         <div class="goods-subtopic recent-subtopic">
-            View All
+            <a href="#">View All</a>
         </div>
         <div class="goods-main-block">
             <div class="goods-block">
                 <div class="boot5-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">dark brogues</p>
+
                     <div class="smallLine"></div>
                     <p class="price">$ 65.07</p>
                 </div>
@@ -185,6 +203,7 @@
                 <div class="boot6-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">leather hightops</p>
+
                     <div class="smallLine"></div>
                     <p class="price">$ 65.07</p>
                 </div>
@@ -195,6 +214,7 @@
                 <div class="boot7-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">dark brogues</p>
+
                     <div class="smallLine"></div>
                     <p class="price">$ 38.00</p>
                 </div>
@@ -204,13 +224,14 @@
                 <div class="boot8-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">dark brogues</p>
+
                     <div class="smallLine"></div>
                     <p class="price">$ 65.07</p>
                 </div>
                 <a href="#" class="add-to-cart">Add to Cart</a>
             </div>
         </div>
-        </div>
+    </div>
 </section>
 <section class="social">
     <div class="container">
@@ -230,49 +251,49 @@
                 </a>
             </div>
             <div class="social-line line-1"></div>
-    <div class="social-block">
-        <div class="social-image-2"></div>
-        <div class="social-topic">
-            outfits & looks
-        </div>
-        <div class="social-text">
-            Create outfits, share and rate looks. adawdawdawdaw-
-        </div>
-        <a href="#" class="social-link">
-            <img src="images/thumbnails/border-left.png" alt="border">
-            view fashion finder
-            <img src="images/thumbnails/border-right.png" alt="border">
-        </a>
-    </div>
+            <div class="social-block">
+                <div class="social-image-2"></div>
+                <div class="social-topic">
+                    outfits & looks
+                </div>
+                <div class="social-text">
+                    Create outfits, share and rate looks. adawdawdawdaw-
+                </div>
+                <a href="#" class="social-link">
+                    <img src="images/thumbnails/border-left.png" alt="border">
+                    view fashion finder
+                    <img src="images/thumbnails/border-right.png" alt="border">
+                </a>
+            </div>
             <div class="social-line line-2"></div>
-    <div class="social-block">
-        <div class="social-image-3"></div>
-        <div class="social-topic">
-            magazine
+            <div class="social-block">
+                <div class="social-image-3"></div>
+                <div class="social-topic">
+                    magazine
+                </div>
+                <div class="social-text">
+                    UNISHOP Magazine free to your iPhone every week.
+                </div>
+                <a href="#" class="social-link">
+                    <img src="images/thumbnails/border-left.png" alt="border">
+                    download magazine
+                    <img src="images/thumbnails/border-right.png" alt="border">
+                </a>
+            </div>
         </div>
-        <div class="social-text">
-            UNISHOP Magazine free to your iPhone every week.
-        </div>
-        <a href="#" class="social-link">
-            <img src="images/thumbnails/border-left.png" alt="border">
-            download magazine
-            <img src="images/thumbnails/border-right.png" alt="border">
-        </a>
-    </div>
-    </div>
     </div>
 </section>
 <section class="twitter">
     <div class="container">
-    <div class="twitter-topic">
-    Tim Vandim <span class="grey">via Twitter</span>
-    </div>
-    <div class="twitter-text">
-    Lorem ipsum dolor sit amet, <a href="#" class="twitter-link">@unishop</a>
-    consectetur adipiscing elit.
-    Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie
-    vehicula. Sed auctor neque eu tellus rhoncus ut.
-    </div>
+        <div class="twitter-topic">
+            Tim Vandim <span class="grey">via Twitter</span>
+        </div>
+        <div class="twitter-text">
+            Lorem ipsum dolor sit amet, <a href="#" class="twitter-link">@unishop</a>
+            consectetur adipiscing elit.
+            Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie
+            vehicula. Sed auctor neque eu tellus rhoncus ut.
+        </div>
     </div>
 </section>
 <section class="map">
@@ -280,10 +301,10 @@
         <p>Worldwide store locator</p>
     </div>
     <div class="container">
-    <div class="zip-address-wrapper">
-        <span class="location-icon"></span>
-        <input type="text" class="zip-address" placeholder="Zip-code or Address" id="ZipAddress">
-    </div>
+        <div class="zip-address-wrapper">
+            <span class="location-icon"></span>
+            <input type="text" class="zip-address" placeholder="Zip-code or Address" id="ZipAddress">
+        </div>
         <div class="range-radius">
             <label for="range">radius:</label>
             <select class="range" id="range">
@@ -297,62 +318,68 @@
                 <option>5 Miles</option>
             </select>
         </div>
-    <div class="search-radius-button-wrapper">
-        <button type="button" class="search-radius-button">Find a Store</button>
-    </div>
+        <div class="search-radius-button-wrapper">
+            <button type="button" class="search-radius-button">Find a Store</button>
+        </div>
     </div>
 </section>
 <footer>
     <div class="container">
         <div class="footer-wrapper">
-    <div class="footer-social-links">
-        <h1>unishop</h1>
-        <p>Your about us information would fit here nicely.</p>
-        <ul>
-            <li><a class="icon-link icon-instagram" href="#"></a></li>
-            <li><a class="icon-link icon-twitter" href="#"></a></li>
-            <li><a class="icon-link icon-tube" href="#"></a></li>
-            <li><a class="icon-link icon-vibe" href="#"></a></li>
-            <li><a class="icon-link icon-cloud" href="#"></a></li>
-            <li><a class="icon-link icon-google" href="#"></a></li>
-            <li class="mobile-visible"><a class="icon-link icon-b" href="#"></a></li>
-        </ul>
-    </div>
-    <div class="footer-general-links">
-        <h1>links</h1>
-        <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="#">Customers Service</a></li>
-            <li><a href="#">Careers</a></li>
-        </ul>
-    </div>
-    <div class="footer-blogs">
-        <h1>Blogs</h1>
-        <h3>Article Headline fit here perfectly</h3>
-        <p>Nulla facilisi. Duis aliquet egestas purus in blandit.
-            Curabitur vulputate,
-        </p>
-        <h3>Article Headline fit here perfectly</h3>
-        <p>Nulla facilisi. Duis aliquet egestas purus in blandit.
-            Curabitur vulputate,
-        </p>
-    </div>
-    <div class="subscription-forms">
-        <h1>newslatter</h1>
-        <div class="subscription">
-                <form>
-                    <label for="email"></label>
-                    <input type="email" id="email" placeholder="Putt your E-Mail">
-                </form>
-                <label for="gender"></label>
-                <select id="gender">
-                    <option>Women's</option>
-                    <option>Men's</option>
-                </select>
-            <button type="button" class="subscription-button">Subscribe</button>
-        </div>
-    </div>
+            <div class="footer-social-links">
+                <h3>unishop</h3>
+
+                <p>Your about us information would fit here nicely.</p>
+                <ul>
+                    <li><a class="icon-link icon-instagram" href="#"></a></li>
+                    <li><a class="icon-link icon-twitter" href="#"></a></li>
+                    <li><a class="icon-link icon-tube" href="#"></a></li>
+                    <li><a class="icon-link icon-vibe" href="#"></a></li>
+                    <li><a class="icon-link icon-cloud" href="#"></a></li>
+                    <li><a class="icon-link icon-google" href="#"></a></li>
+                    <li class="mobile-visible"><a class="icon-link icon-b" href="#"></a></li>
+                </ul>
+            </div>
+            <div class="footer-general-links">
+                <h1>links</h1>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Customers Service</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-blogs">
+                <h1>Blogs</h1>
+
+                <h3>Article Headline fit here perfectly</h3>
+
+                <p>Nulla facilisi. Duis aliquet egestas purus in blandit.
+                    Curabitur vulputate,
+                </p>
+
+                <h3>Article Headline fit here perfectly</h3>
+
+                <p>Nulla facilisi. Duis aliquet egestas purus in blandit.
+                    Curabitur vulputate,
+                </p>
+            </div>
+            <div class="subscription-forms">
+                <h1>newslatter</h1>
+
+                <div class="subscription">
+                    <form>
+                        <label for="email"></label>
+                        <input type="email" id="email" placeholder="Putt your E-Mail">
+                    </form>
+                    <label for="gender"></label>
+                    <select id="gender">
+                        <option>Women's</option>
+                        <option>Men's</option>
+                    </select>
+                    <button type="button" class="subscription-button">Subscribe</button>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
