--- a/index.html
+++ b/index.html
@@ -49,8 +49,91 @@
         <div class="mobile-button">
             <div class="mobile-button-image"></div>
         </div>
-        <ul>
-            <li><a href="#">Women</a></li>
+        <div class="mobile-menu" id="mobile-menu">
+            <ul>
+                <li><a href="#">SEARCH</a></li>
+                <li><a href="#">SHOP BY BRANDS</a></li>
+                <li><a href="#">PROMOTIONS</a></li>
+                <li>
+                    <a href="#">SHOP BY PRODUCTS<span></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">New in: Clothing</a></li>
+                        <li><a href="#">New in: Accessories</a></li>
+                        <li>
+                            SALE - Up to 50%
+                            <span class="glyphicon glyphicon-menu-down"></span>
+                        </li>
+                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#">Caps & Hats</a></li>
+                        <li><a href="#">Jumpers & Cardigans</a></li>
+                        <li><a href="#">Leather Jackets</a></li>
+                        <li><a href="#">Shirts</a></li>
+                        <li><a href="#">Shoes, Boots & Trainers</a></li>
+                        <li><a href="#">Shorts</a></li>
+                        <li><a href="#">Swimwear</a></li>
+                        <li><a href="#">Trousers & Chinos</a></li>
+                        <li><a href="#">Bags</a></li>
+                        <li><a href="#">Watches</a></li>
+                        <li><a href="#">Officewear</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+        </div>
+        <ul class="nav-main">
+            <li>
+                <a href="#">Women</a>
+                    <div class="menu-full">
+                        <div class="menu-products">
+                            <h2>shop by products</h2>
+                            <ul class="menu-products-primary">
+                                <li><a href="#">New in: Clothing</a></li>
+                                <li><a href="#">New in: Accessories</a></li>
+                                <li><a href="#">New in: Shoes</a></li>
+                                <li class="menu-sales"><a href="#">SALE - Up to 50%</a></li>
+                                <br/>
+                                <li><a href="#">Accessories</a></li>
+                                <li><a href="#">Caps & Hats</a></li>
+                                <li><a href="#">Jumpers & Cardigans</a></li>
+                                <li><a href="#">Leather Jackets</a></li>
+                                <li><a href="#">Shirts</a></li>
+                                <li><a href="#">Shoes, Boots & Trainers</a></li>
+                            </ul>
+                            <ul class="menu-products-secondary">
+                                <li><a href="#">Shorts</a></li>
+                                <li><a href="#">Swimwear</a></li>
+                                <li><a href="#">Trousers & Chinos</a></li>
+                                <li><a href="#">Bags</a></li>
+                                <li><a href="#">Watches</a></li>
+                                <li><a href="#">Officewear</a></li>
+                            </ul>
+                        </div>
+                        <div class="menu-brands">
+                            <h2>shop by brands</h2>
+                            <ul>
+                                <li><a href="#">American Apparel</a></li>
+                                <li><a href="#">Bellfield</a></li>
+                                <li><a href="#">Cheap Monday</a></li>
+                                <li><a href="#">Esprit</a></li>
+                                <li><a href="#">Farah Vintage</a></li>
+                                <li><a href="#">G - Star</a></li>
+                                <li><a href="#">New Balance</a></li>
+                                <li><a href="#">Nike</a></li>
+                                <li><a href="#">Ray-Ban</a></li>
+                                <li><a href="#">A to Z Brands</a></li>
+                            </ul>
+                        </div>
+                        <div class="menu-extra">
+                            <h2>most popular</h2>
+                            <a href="#"><img src="images/thumbnails/menu-boots1.png" alt="menuBoots1"></a>
+                            <a href="#"><img src="images/thumbnails/menu-boots2.png" alt="menuBoots2"></a>
+                            <ul>
+                                <li><a href="#">View More Popular</a></li>
+                                <li><a href="#">Today's New Listings</a></li>
+                            </ul>
+                        </div>
+                    </div>
+            </li>
             <li><a href="#">Men</a></li>
             <li><a href="#">Children</a></li>
             <li><a href="#">Sale</a></li>
