--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </div>
         <div class="mobile-menu" id="mobile-menu">
             <ul>
-                <li><a href="#">SEARCH</a></li>
-                <li><a href="#">SHOP BY BRANDS</a></li>
-                <li><a href="#">PROMOTIONS</a></li>
-                <li>
-                    <a href="#">SHOP BY PRODUCTS<span></span></a>
+                <li class="mobile-menu-primary"><a href="#">SEARCH<span class="drop-icon drop-icon-closed"></span></a></li>
+                <li class="mobile-menu-primary"><a href="#">SHOP BY BRANDS<span class="drop-icon drop-icon-closed"></span></a></li>
+                <li class="mobile-menu-primary"><a href="#">PROMOTIONS<span class="drop-icon drop-icon-closed"></span></a></li>
+                <li class="mobile-menu-primary">
+                    <a href="#">SHOP BY PRODUCTS<span class="drop-icon drop-icon-closed"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">New in: Clothing</a></li>
                         <li><a href="#">New in: Accessories</a></li>
